--- a/index.html
+++ b/index.html
@@ -153,7 +153,18 @@
             border-width: 0;
         }
         /* ▲ 3. アクセシビリティ (Accessibility) ▲ */
+        .page.is-exiting {
+            opacity: 0;
+            -webkit-transform: translateX(-20px);
+            transform: translateX(-20px);
+        }
 
+        .page.is-entering {
+            opacity: 0;
+            -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+        }
+        
         .page { 
             transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
             will-change: opacity, transform; /* この行を追加 */
@@ -835,3 +846,4 @@
     </script>
 </body>
 </html>
+
